fixed spacing and form

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,9 @@ textarea.materialize-textarea:focus.valid {
 }
 
 .projects {
-  height: 400px;
+  height: 600px;
+  position: relative;
+  top: -20px;
 }
 
 .card {
@@ -70,7 +72,6 @@ i input:active {
     position: relative;
     width: 650px;
     left: 550px;
-    top: -550px;
     display: inline-block;
 }
 
@@ -191,7 +192,7 @@ i input:active {
 }
 
 .other-tri {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
 }
